# teaclave_sgx_builder

./: .gitmodules  Cargo.toml  README.md
scratch/: Cargo.toml  build.rs
scratch/enclave/: enclave.edl
teaclave_sgx_builder/: Cargo.toml
teaclave_sgx_builder/src/: flags.rs  lib.rs  metadata.rs  teaclave.rs
teaclave_sgx_builder/src/intel/: edl.rs  mod.rs
