[workspace]
members = ["teaclave_sgx_builder", "scratch"]
resolver = "2"

default-members = ["teaclave_sgx_builder"]

exclude = ["external_deps"]


[workspace.package]
version = "2.0.0"
edition = "2021"


[workspace.dependencies]
sgx_types = { path = "external_deps/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "external_deps/incubator-teaclave-sgx-sdk/sgx_urts" }



[workspace.metadata.sgx]
intel_sgx_sdk = { path = "/opt/intel/sgxsdk" }
teaclave_sgx_sdk = { path = "external_deps/incubator-teaclave-sgx-sdk" }