[package]
name = "scratch"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cargo_metadata = "0.18"
teaclave_sgx_builder = {path = "../teaclave_sgx_builder"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[package.metadata.sgx]
edl = {path = "enclave/enclave.edl", search_paths = ["enclave", "ssss"]}