[package]
name = "teaclave_sgx_builder"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.18"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"